--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="header">
       <div class="photo">
         <!-- энд өөрийн зургаа хийнэ -->
-        <img src="https://i.postimg.cc/MTTJ3kg7/557149993-2003046580431595-7428406203553023357-n.jpg" alt="profile">
+        <img src="https://i.postimg.cc/J7brv8FB/557149993-2003046580431595-7428406203553023357-n.jpg" alt="profile">
       </div>
       <div class="head-info">
         <div class="name">Жаргалсайхан</div>
@@ -320,11 +320,11 @@
 
       <!-- 1-р аккаунт -->
       <div class="account-card">
-        <img src="https://ibb.co/spD9PctC" alt="MLBB account">
+        <img src="https://i.postimg.cc/W3YHfdv4/6098072194559707931.jpg">
         <div class="acc-body">
-          <h4 class="acc-title">MLBB • Mythic • 120 skins</h4>
-          <p class="acc-text">Email дагалдана, BP үлдэгдэлтэй.</p>
-          <div class="acc-price">Үнэ: 150,000₮</div>
+          <h4 class="acc-title">PUBG ACCOUNT KR/JP version • Lv.88 • 6 super cars</h4>
+          <p class="acc-text">Bind-X</p>
+          <div class="acc-price">Үнэ: 1,000,000₮</div>
         </div>
       </div>
 
