--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             border-right: 1px solid var(--border);
         }
 
-        /* --- CLICK ANIMATIONS (NEON EFFECT) --- */
+        /* --- CLICK ANIMATIONS --- */
         @keyframes neonPulse {
             0% { box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7); border-color: var(--primary); }
             100% { box-shadow: 0 0 0 10px rgba(59, 130, 246, 0); border-color: var(--primary); }
@@ -92,11 +92,6 @@
             width: 24px; height: 24px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 0.8rem; border: 2px solid var(--surface);
         }
 
-        .stats-row { display: flex; justify-content: center; gap: 20px; margin: 15px 0; }
-        .stat-item { text-align: center; }
-        .stat-num { font-weight: 700; font-size: 1.1rem; color: var(--text-main); }
-        .stat-lbl { font-size: 0.75rem; color: var(--text-muted); }
-
         .action-buttons { display: flex; flex-direction: column; gap: 10px; margin-top: 20px; }
         .btn-social {
             display: flex; align-items: center; justify-content: center; gap: 10px;
@@ -128,7 +123,6 @@
             margin-top: 25px; margin-bottom: 10px; display: flex; gap: 10px; align-items: start;
         }
 
-        /* Services */
         .service-list { background: var(--surface-light); border-radius: 15px; padding: 5px 15px; border: 1px solid var(--border); }
         .service-row { display: flex; justify-content: space-between; padding: 15px 0; border-bottom: 1px solid var(--border); font-size: 0.9rem; }
         .service-row:last-child { border-bottom: none; }
@@ -188,7 +182,7 @@
         .role-admin { background: var(--gold); color: #000; }
         .role-mod { background: rgba(59, 130, 246, 0.2); color: var(--primary); border: 1px solid var(--primary); }
 
-        /* === SWIPE MODAL === */
+        /* === SWIPE MODAL (FIXED SIZE) === */
         .modal-overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0,0,0,0.95); z-index: 100; display: none;
@@ -204,9 +198,11 @@
         }
         .m-close-btn { font-size: 1.5rem; color: var(--text-main); cursor: pointer; padding: 5px; }
 
-        /* Carousel Fixed for Full Image Fit */
+        /* CAROUSEL FIX: 16:9 Aspect Ratio & No Fixed Height */
         .m-carousel {
-            width: 100%; height: 350px; background: #000;
+            width: 100%; 
+            aspect-ratio: 16/9; /* Тоглоомын дэлгэцийн харьцаа */
+            background: transparent; /* Хар фонгүй */
             display: flex; overflow-x: auto; scroll-snap-type: x mandatory;
             -webkit-overflow-scrolling: touch; scrollbar-width: none;
         }
@@ -217,9 +213,10 @@
             scroll-snap-align: center;
             display: flex; align-items: center; justify-content: center; position: relative;
         }
-        
-        /* ZURAG: contain ашиглан зураг бүтнээрээ багтаж харагдана */
-        .m-img { width: 100%; height: 100%; object-fit: contain; }
+        .m-img { 
+            width: 100%; height: 100%; 
+            object-fit: cover; /* Бүтэн дэлгэц, хар зайгүй */
+        }
         
         .m-indicators {
             display: flex; justify-content: center; gap: 8px; padding: 10px;
