--- a/index.html
+++ b/index.html
@@ -517,34 +517,34 @@
                 id: 1, cat: 'pubg',
                 title: "PUBG KR (Rare)",
                 price: "2,500,000₮",
-                lvl: "76", rank: "Conq", link: "Google",
+                Coll lvl: "76", rank: "Conq", link: "Google",
                 images: ["https://i.ibb.co/bR2r2nr8/IMG-1143.png"],
-                desc: ["Rare M416 Glacier Max", "3 X-Suits (2 Max, 1 Lvl 4)", "Lamborghini Skin (Green)", "Full Access"]
+                desc: ["3x M416 Level Max", "Joker X-Suit Max ", "15x Super Cars", "Rare Items"]
             },
             {
                 id: 2, cat: 'pubg',
                 title: "PUBG Global",
                 price: "2,000,000₮",
-                lvl: "65", rank: "Ace", link: "Elink",
+                Coll lvl: "65", rank: "Crown", link: "Elink",
                 images: ["https://i.ibb.co/JW0Kbwpw/595865809-2060174601385459-6335660528261022994-n.jpg"],
-                desc: ["Rare BAPE Full Set", "M416 Fool Level 5", "AWM Godzilla", "Clean Bind"]
+                desc: [" BAPE top ", "Inferno Helmet", "M416 Glacier Level 7", "M416 Lizard Level 7", "M416 Nether Level 7","Rare Items"]
             },
-            {
-                id: 3, cat: 'mlbb',
-                title: "MLBB Global",
-                price: "800,000₮",
-                lvl: "61", rank: "Mythic", link: "Moonton",
-                images: ["https://i.ibb.co/XrtgzRD5/595685785-2058484391554480-387863129341016037-n.jpg"],
-                desc: ["84 Total Skins", "Gusion K' Skin", "Chou Iori Yagami", "All Emblems Max"]
-            },
-             {
-                id: 4, cat: 'standoff',
-                title: "Standoff 2 (Knife)",
-                price: "150,000₮",
-                lvl: "40", rank: "Gold", link: "FB",
-                images: ["https://images.unsplash.com/photo-1552820728-8b83bb6b773f?w=500"],
-                desc: ["Butterfly Legacy", "M4 Necromancer", "Gloves Retro", "Full Access"]
-            }
+            // {
+            //     id: 3, cat: 'pubg',
+            //     title: "PUBG Global",
+            //     price: "800,000₮",
+            //     lvl: "61", rank: "Mythic", link: "Moonton",
+            //     images: ["https://i.ibb.co/XrtgzRD5/595685785-2058484391554480-387863129341016037-n.jpg"],
+            //     desc: ["84 Total Skins", "Gusion K' Skin", "Chou Iori Yagami", "All Emblems Max"]
+            // },
+            //  {
+            //     id: 4, cat: 'standoff',
+            //     title: "Standoff 2 (Knife)",
+            //     price: "150,000₮",
+            //     lvl: "40", rank: "Gold", link: "FB",
+            //     images: ["https://images.unsplash.com/photo-1552820728-8b83bb6b773f?w=500"],
+            //     desc: ["Butterfly Legacy", "M4 Necromancer", "Gloves Retro", "Full Access"]
+            // }
         ];
 
         const grid = document.getElementById('products-container');
@@ -662,3 +662,4 @@
     </script>
 </body>
 </html>
+
