--- a/index.html
+++ b/index.html
@@ -517,21 +517,21 @@
                 id: 1, cat: 'pubg',
                 title: "PUBG KR (Rare)",
                 price: "2,500,000₮",
-                Coll lvl: "76", rank: "Conq", link: "Google",
+                lvl: "76", rank: "Conq", link: "Google",
                 images: ["https://i.ibb.co/bR2r2nr8/IMG-1143.png"],
-                desc: ["3x M416 Level Max", "Joker X-Suit Max ", "15x Super Cars", "Rare Items"]
+                desc: ["Rare M416 Glacier Max", "3 X-Suits (2 Max, 1 Lvl 4)", "Lamborghini Skin (Green)", "Full Access"]
             },
             {
                 id: 2, cat: 'pubg',
                 title: "PUBG Global",
                 price: "2,000,000₮",
-                Coll lvl: "65", rank: "Crown", link: "Elink",
+                lvl: "65", rank: "Ace", link: "Elink",
                 images: ["https://i.ibb.co/JW0Kbwpw/595865809-2060174601385459-6335660528261022994-n.jpg"],
-                desc: [" BAPE top ", "Inferno Helmet", "M416 Glacier Level 7", "M416 Lizard Level 7", "M416 Nether Level 7","Rare Items"]
+                desc: ["Rare BAPE Full Set", "M416 Fool Level 5", "AWM Godzilla", "Clean Bind"]
             },
             // {
-            //     id: 3, cat: 'pubg',
-            //     title: "PUBG Global",
+            //     id: 3, cat: 'mlbb',
+            //     title: "MLBB Global",
             //     price: "800,000₮",
             //     lvl: "61", rank: "Mythic", link: "Moonton",
             //     images: ["https://i.ibb.co/XrtgzRD5/595685785-2058484391554480-387863129341016037-n.jpg"],
@@ -662,4 +662,3 @@
     </script>
 </body>
 </html>
-
