--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 price: "2,500,000₮",
                 lvl: "76", rank: "Conq", link: "Google",
                 images: ["https://i.ibb.co/bR2r2nr8/IMG-1143.png"],
-                desc: ["Rare M416 Glacier Max", "3 X-Suits (2 Max, 1 Lvl 4)", "Lamborghini Skin (Green)", "Full Access"]
+                desc: ["3x M416 Level Max", "Joker X-Suit Max ", "15x Super Cars", "Rare Items"]
             },
             {
                 id: 2, cat: 'pubg',
@@ -527,7 +527,7 @@
                 price: "2,000,000₮",
                 lvl: "65", rank: "Ace", link: "Elink",
                 images: ["https://i.ibb.co/JW0Kbwpw/595865809-2060174601385459-6335660528261022994-n.jpg"],
-                desc: ["Rare BAPE Full Set", "M416 Fool Level 5", "AWM Godzilla", "Clean Bind"]
+                desc: [" BAPE top ", "Inferno Helmet", "M416 Glacier Level 7", "M416 Lizard Level 7", "M416 Nether Level 7","Rare Items"]
             },
             // {
             //     id: 3, cat: 'mlbb',
@@ -662,3 +662,4 @@
     </script>
 </body>
 </html>
+
