--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
         const inventory = [
             {
                 id: 1, cat: 'pubg',
-                title: "PUBG KR (Rare)",
+                title: "PUBG KR ",
                 price: "2,500,000₮",
                 lvl: "76", rank: "Conq", link: "Google",
                 images: ["https://i.ibb.co/bR2r2nr8/IMG-1143.png"],
@@ -662,4 +662,5 @@
     </script>
 </body>
 </html>
+
 
