--- a/index.html
+++ b/index.html
@@ -325,12 +325,12 @@
                     </div>
                 </div>
 
-                <div class="section-label"><i class="fas fa-crown" style="color:var(--gold)"></i> Founders & Admins</div>
+                <div class="section-label"><i class="fas fa-crown" style="color:var(--gold)"></i>Admins</div>
                 <div class="admin-grid">
                     <a href="https://www.facebook.com/jargalsaikhan.official" class="glass-card admin-card">
                         <img src="https://i.ibb.co/FbRQByFq/557149993-2003046580431595-7428406203553023357-n.jpg" class="admin-img">
                         <div style="font-weight:700; font-size:0.9rem;">Б.Жаргалсайхан</div>
-                        <div class="admin-role">Founder</div>
+                        <div class="admin-role">Admin</div>
                     </a>
                     <a href="https://www.facebook.com/you.good.like.man" target="_blank" class="glass-card admin-card">
                         <img src="https://i.ibb.co/5gzqvTDX/590659809-3995390137383045-2979261091254702807-n.jpg" class="admin-img">
@@ -362,7 +362,7 @@
                     <i class="fas fa-shield-virus" style="font-size: 1.5rem;"></i>
                     <div>
                         <strong>Аюулгүй байдал:</strong>
-                        <br>Гүйлгээ хийхээс өмнө заавал Админ руу чат бичиж баталгаажуулна уу.
+                        <br>Пейж болон вебээс линк авч үйлчлүүлэнэ үү.
                     </div>
                 </div>
             </div>
@@ -662,5 +662,6 @@
     </script>
 </body>
 </html>
+
 
 
