--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
             <div class="mb-24">
                 <div class="flex items-center justify-between mb-4 ml-1"><h3 class="text-xs font-bold text-gray-500 uppercase tracking-widest">Админууд</h3></div>
                 <div class="grid grid-cols-3 gap-4">
-                    <div onclick="openLink(LINKS.admin1)" class="glass-panel p-3 rounded-2xl hover-lift glow-border flex flex-col items-center text-center cursor-pointer group"><img src="https://i.ibb.co/fVzH9LPS/595116297-814375481574499-6887627840659721607-n.jpg" class="w-12 h-12 rounded-full mb-3 border-2 border-white/5 shadow-md group-hover:border-blue-500 transition"><h4 class="font-bold text-xs text-white">Тулгаа</h4><p class="text-[9px] text-gray-500 font-medium bg-white/5 px-2 py-0.5 rounded mt-1">Sales</p></div>
-                    <div onclick="openLink(LINKS.admin2)" class="glass-panel p-3 rounded-2xl hover-lift glow-border flex flex-col items-center text-center cursor-pointer group"><img src="https://ui-avatars.com/api/?name=A2&background=7c3aed&color=fff" class="w-12 h-12 rounded-full mb-3 border-2 border-white/5 shadow-md group-hover:border-purple-500 transition"><h4 class="font-bold text-xs text-white">Болд</h4><p class="text-[9px] text-gray-500 font-medium bg-white/5 px-2 py-0.5 rounded mt-1">Rent</p></div>
-                    <div onclick="openLink(LINKS.admin3)" class="glass-panel p-3 rounded-2xl hover-lift glow-border flex flex-col items-center text-center cursor-pointer group"><img src="https://ui-avatars.com/api/?name=A3&background=db2777&color=fff" class="w-12 h-12 rounded-full mb-3 border-2 border-white/5 shadow-md group-hover:border-pink-500 transition"><h4 class="font-bold text-xs text-white">Сараа</h4><p class="text-[9px] text-gray-500 font-medium bg-white/5 px-2 py-0.5 rounded mt-1">Support</p></div>
+                    <div onclick="openLink(LINKS.admin1)" class="glass-panel p-3 rounded-2xl hover-lift glow-border flex flex-col items-center text-center cursor-pointer group"><img src="https://i.ibb.co/fVzH9LPS/595116297-814375481574499-6887627840659721607-n.jpg" class="w-12 h-12 rounded-full mb-3 border-2 border-white/5 shadow-md group-hover:border-blue-500 transition"><h4 class="font-bold text-xs text-white">Siilen II</h4><p class="text-[9px] text-gray-500 font-medium bg-white/5 px-2 py-0.5 rounded mt-1">OWNER</p></div>
+                    <div onclick="openLink(LINKS.admin2)" class="glass-panel p-3 rounded-2xl hover-lift glow-border flex flex-col items-center text-center cursor-pointer group"><img src="https://i.ibb.co/F4XyCdV5/589035496-1233284968856773-1067146699455195158-n.jpg" class="w-12 h-12 rounded-full mb-3 border-2 border-white/5 shadow-md group-hover:border-purple-500 transition"><h4 class="font-bold text-xs text-white">Badrakh</h4><p class="text-[9px] text-gray-500 font-medium bg-white/5 px-2 py-0.5 rounded mt-1">MIDMAN</p></div>
+                    <div onclick="openLink(LINKS.admin3)" class="glass-panel p-3 rounded-2xl hover-lift glow-border flex flex-col items-center text-center cursor-pointer group"><img src="https://i.ibb.co/FbRQByFq/557149993-2003046580431595-7428406203553023357-n.jpg" class="w-12 h-12 rounded-full mb-3 border-2 border-white/5 shadow-md group-hover:border-pink-500 transition"><h4 class="font-bold text-xs text-white">Жаргалсайхан</h4><p class="text-[9px] text-gray-500 font-medium bg-white/5 px-2 py-0.5 rounded mt-1">MIDMAN</p></div>
                 </div>
             </div>
         </section>
@@ -287,3 +287,4 @@
     </script>
 </body>
 </html>
+
