--- a/index.html
+++ b/index.html
@@ -162,19 +162,19 @@
     <script>
         // --- CONFIG ---
         const LINKS = {
-            pageChat: 'https://m.me/YOUR_PAGE_ID',
-            fbPage: 'https://facebook.com/YOUR_PAGE',
-            admin1: 'https://facebook.com/admin1',
-            admin2: 'https://facebook.com/admin2',
-            admin3: 'https://facebook.com/admin3',
+            pageChat: 'https://m.me/104421618444436',
+            fbPage: 'https://facebook.com/siilenofficial',
+            admin1: 'https://facebook.com/SIILENxx',
+            admin2: 'https://facebook.com/Midman.siilen',
+            admin3: 'https://facebook.com/jargalsaikhan.official',
             api: 'https://script.google.com/macros/s/AKfycbyQWmsUrlTXxG-9d_I-VRgvNbQvgmaL3ukHFJmK51lEVABHTTAPyLF9Tx0_0fwFvuuZrw/exec'
         };
 
         const services = {
-            shop: { title: "Аккоунт Худалдаа", desc: "Та хүссэн аккоунтоо сонгоод 'Худалдаж авах' товчийг дарахад манай Page Chat руу холбогдоно.", icon: "fa-shopping-bag", color: "from-blue-500 to-cyan-400", shadow: "shadow-blue-500/30", btn: "Дэлгүүр үзэх", action: "switchTab('shop')" },
+            shop: { title: "Аккоунт Худалдаа", desc: "Та хүссэн аккоунтоо сонгоод 'Худалдаж авах' товчийг дарахад манай Page Chat руу холбогдон төлбөрөө төлөн аккаа аваарай.", icon: "fa-shopping-bag", color: "from-blue-500 to-cyan-400", shadow: "shadow-blue-500/30", btn: "Дэлгүүр үзэх", action: "switchTab('shop')" },
             rent: { title: "Аккоунт Түрээс", desc: "Цагаар болон 24 цагаар тоглох боломжтой. Түрээслэх товчийг дараад чат руу бичээрэй.", icon: "fa-clock", color: "from-purple-500 to-pink-500", shadow: "shadow-purple-500/30", btn: "Түрээслэх", action: "switchTab('rent')" },
             topup: { title: "Тоглоомын Цэнэглэлт", desc: "PUBG Mobile UC, MLBB Diamond зэргийг ID-гаар хурдан шуурхай цэнэглэнэ.", icon: "fa-bolt", color: "from-yellow-400 to-orange-500", shadow: "shadow-orange-500/30", btn: "Ханш харах", action: "switchTab('topup')" },
-            midman: { title: "Midman Үйлчилгээ", desc: "Та хэн нэгэнтэй наймаа хийх гэж байгаа бол бид дундын батлан даагч хийж өгнө.", icon: "fa-shield-alt", color: "from-emerald-400 to-green-600", shadow: "shadow-green-500/30", btn: "Холбогдох", action: "openLink(LINKS.pageChat)" }
+            midman: { title: "Midman Үйлчилгээ", desc: "Та хэн нэгэнтэй наймаа хийх гэж байгаа бол бид дундын батлан даагч хийж наймааг аюулгүй хийж өгнө.", icon: "fa-shield-alt", color: "from-emerald-400 to-green-600", shadow: "shadow-green-500/30", btn: "Холбогдох", action: "openLink(LINKS.pageChat)" }
         };
 
         function openServiceInfo(type) {
@@ -287,4 +287,5 @@
     </script>
 </body>
 </html>
+
 
