--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <header class="fixed top-0 w-full z-40 bg-[#050505]/80 backdrop-blur-xl border-b border-white/5">
         <div class="px-4 h-16 flex items-center justify-between max-w-lg mx-auto">
             <div class="flex items-center gap-2">
-                <div class="w-9 h-9 bg-gradient-to-br from-blue-600 to-indigo-600 rounded-xl flex items-center justify-center text-white font-black font-display text-xl shadow-lg shadow-blue-500/30 hover:scale-110 transition">G</div>
+                <div class="w-9 h-9 bg-gradient-to-br from-blue-600 to-indigo-600 rounded-xl flex items-center justify-center text-white font-black font-display text-xl shadow-lg shadow-blue-500/30 hover:scale-110 transition"></div>
                 <span class="font-bold text-lg tracking-tight text-white">S I I L E N</span>
             </div>
             <div class="flex items-center gap-1.5 bg-green-500/10 px-3 py-1 rounded-full border border-green-500/20 shadow-[0_0_10px_rgba(34,197,94,0.2)]">
@@ -287,5 +287,6 @@
     </script>
 </body>
 </html>
+
 
 
