--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" type="image/png" href="https://i.ibb.co/fVzH9LPS/595116297-814375481574499-6887627840659721607-n.jpg">
 
-    <script src="https://i.ibb.co/fVzH9LPS/595116297-814375481574499-6887627840659721607-n.jpg"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&family=Teko:wght@500;600;700&family=Rajdhani:wght@600;700;800&display=swap" rel="stylesheet">
     
@@ -297,4 +297,5 @@
     </script>
 </body>
 </html>
+
 
