--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    
+    <link rel="icon" type="image/png" href="https://i.ibb.co/fVzH9LPS/595116297-814375481574499-6887627840659721607-n.jpg">
     <title>S I I L E N | e</title>
     <meta name="description" content="PUBG, MLBB аккоунт худалдаа, түрээс, найдвартай midman үйлчилгээ.">
     
@@ -297,5 +297,6 @@
     </script>
 </body>
 </html>
+
 
 
