--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 for(let i=1; i<topList.length; i++) {
                     const [g,a,p] = topList[i]; if(!g) continue;
                     let cleanP = p.toString().replace(/[^0-9]/g, '');
-                    let bgImage = "https://via.placeholder.com/150"; let currency = "UC"; let borderClass = "border-white/10";
+                    let bgImage = "https://i.ibb.co/RkKt172H/uc.png"; let currency = "UC"; let borderClass = "border-white/10";
                     if(g.toLowerCase().includes('pubg')) { bgImage = "https://i.ibb.co/RkKt172H/uc.png"; currency = "UC"; borderClass = "border-yellow-500/30"; } 
                     else if(g.toLowerCase().includes('mobile') || g.toLowerCase().includes('legend')) { bgImage = "https://i.ibb.co/RkKt172H/uc.png"; currency = "DM"; borderClass = "border-blue-500/30"; }
 
@@ -296,6 +296,7 @@
     </script>
 </body>
 </html>
+
 
 
 
