--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <div class="glass-panel shimmer rounded-xl p-2.5 flex flex-col justify-between h-20 hover-lift cursor-pointer group relative overflow-hidden ${borderClass}" onclick="openLink(LINKS.pageChat)">
                         <div class="z-10 flex flex-col justify-between h-full">
                             <div><h3 class="text-xl font-black text-white font-num uppercase italic tracking-wide leading-none mb-0.5 drop-shadow-md">${a} <span class="text-[10px] not-italic text-gray-400 font-bold ml-0.5">${currency}</span></h3></div>
-                            <div class="bg-black/50 backdrop-blur-md px-2 py-0.5 rounded border border-white/10 self-start"><p class="text-red-400 font-bold font-num text-sm">${formatMoney(cleanP)}₮</p></div>
+                            <div class="bg-black/50 backdrop-blur-md px-2 py-0.5 rounded border border-white/10 self-start"><p class="text-yellow-400 font-bold font-num text-sm">${formatMoney(cleanP)}₮</p></div>
                         </div>
                         <img src="${bgImage}" class="absolute -right-3 -bottom-3 w-20 h-20 object-contain opacity-80 rotate-[-12deg] group-hover:scale-110 group-hover:rotate-0 transition duration-500 drop-shadow-xl grayscale-[0.2] group-hover:grayscale-0" onerror="this.onerror=null; this.src='${FALLBACK_IMAGE}';">
                     </div>`;
@@ -296,6 +296,7 @@
     </script>
 </body>
 </html>
+
 
 
 
