--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
             <h3 class="text-xs font-bold text-gray-500 uppercase tracking-widest mb-4 ml-1">Үйлчилгээнүүд</h3>
             <div class="grid grid-cols-4 gap-3 mb-12">
                 <div onclick="openServiceInfo('shop')" class="glass-panel rounded-2xl p-2 flex flex-col items-center justify-center h-[90px] gap-2 hover-lift glow-blue cursor-pointer group">
-                    <i class="fas fa-shopping-bag text-blue-400 text-2xl group-hover:drop-shadow-[0_0_10px_rgba(96,165,250,0.8)] transition"></i><span class="text-[10px] font-bold text-gray-300 group-hover:text-white">Дэлгүүр</span>
+                    <i class="fas fa-shopping-bag text-blue-400 text-2xl group-hover:drop-shadow-[0_0_10px_rgba(96,165,250,0.8)] transition"></i><span class="text-[10px] font-bold text-gray-300 group-hover:text-white">Акк худалдаа</span>
                 </div>
                 <div onclick="openServiceInfo('rent')" class="glass-panel rounded-2xl p-2 flex flex-col items-center justify-center h-[90px] gap-2 hover-lift glow-purple cursor-pointer group">
                     <i class="fas fa-clock text-purple-400 text-2xl group-hover:drop-shadow-[0_0_10px_rgba(192,132,252,0.8)] transition"></i><span class="text-[10px] font-bold text-gray-300 group-hover:text-white">Түрээс</span>
                 </div>
                 <div onclick="openServiceInfo('topup')" class="glass-panel rounded-2xl p-2 flex flex-col items-center justify-center h-[90px] gap-2 hover-lift glow-yellow cursor-pointer group">
-                    <i class="fas fa-bolt text-yellow-400 text-2xl group-hover:drop-shadow-[0_0_10px_rgba(250,204,21,0.8)] transition"></i><span class="text-[10px] font-bold text-gray-300 group-hover:text-white">Цэнэглэх</span>
+                    <i class="fas fa-bolt text-yellow-400 text-2xl group-hover:drop-shadow-[0_0_10px_rgba(250,204,21,0.8)] transition"></i><span class="text-[10px] font-bold text-gray-300 group-hover:text-white">Цэнэглэлт</span>
                 </div>
                 <div onclick="openServiceInfo('midman')" class="glass-panel rounded-2xl p-2 flex flex-col items-center justify-center h-[90px] gap-2 hover-lift glow-green cursor-pointer group">
                     <i class="fas fa-shield-alt text-green-400 text-2xl group-hover:drop-shadow-[0_0_10px_rgba(74,222,128,0.8)] transition"></i><span class="text-[10px] font-bold text-gray-300 group-hover:text-white">Midman</span>
@@ -296,6 +296,7 @@
     </script>
 </body>
 </html>
+
 
 
 
