--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>S I I L E N | e</title>
+    <title>S I I L E N | </title>
     <meta name="description" content="PUBG, MLBB аккоунт худалдаа, түрээс, найдвартай midman үйлчилгээ.">
     
     <meta property="og:type" content="website">
@@ -296,6 +296,7 @@
     </script>
 </body>
 </html>
+
 
 
 
