--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <header>
         <div class="container">
             <div class="header-inner">
-                <div class="logo">GAME MARKET</div>
+                <div class="logo">MIDMAN JARGALSAIKHAN</div>
                 <nav class="nav-links">
                     <a href="#proof">Баталгаа</a>
                     <a href="#services">Үйлчилгээ</a>
@@ -325,8 +325,8 @@
                 <div class="img-glow">
                     <img src="https://i.ibb.co/gLVdkq3D/Gemini-Generated-Image-6idkra6idkra6idk-modified.png" alt="Admin" class="hero-img">
                 </div>
-                <h2>Game Market MN</h2>
-                <div class="badge">VERIFIED ADMIN</div>
+                <h2>JARGALSAIKHAN</h2>
+                <div class="badge">VERIFIED MIDMAN</div>
                 
                 <div class="hero-btns" style="justify-content: center; margin-top: 20px;">
                     <a href="https://www.facebook.com/gamemarket.mn" target="_blank" class="btn btn-primary" style="width:100%">
@@ -494,4 +494,5 @@
 
 </body>
 </html>
+
 
