--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Market MN - Premium</title>
+    <title>Midman|Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
@@ -329,8 +329,6 @@
                 <div class="badge">VERIFIED MIDMAN</div>
                 
                 <div class="hero-btns" style="justify-content: center; margin-top: 20px;">
-                    <a href="https://www.facebook.com/gamemarket.mn" target="_blank" class="btn btn-primary" style="width:100%">
-                        Page Link
                     </a>
                     <a href="https://www.facebook.com/jargalsaikhan.official" target="_blank" class="btn btn-glass" style="width:100%">
                         Admin FB
@@ -494,5 +492,6 @@
 
 </body>
 </html>
+
 
 
