--- a/index.html
+++ b/index.html
@@ -481,10 +481,10 @@
 
     <footer>
         <div class="container">
-            <div class="logo" style="justify-content: center; margin-bottom: 20px;">GAME MARKET</div>
+            <div class="logo" style="justify-content: center; margin-bottom: 20px;">Jargalsaikhan</div>
             <div class="footer-social">
-                <a href="https://www.facebook.com/gamemarket.mn" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://m.me/61561712856021" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+                <a href="https://www.facebook.com/jargalsaikhan.official" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://m.me/9552970884792716" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
             </div>
             <p style="color: #64748b; margin-top:20px; font-size: 0.8rem;">&copy; 2025 ALL RIGHTS RESERVED.</p>
         </div>
@@ -492,6 +492,7 @@
 
 </body>
 </html>
+
 
 
 
