--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <div class="hero">
             <div class="hero-card">
                 <div class="img-glow">
-                    <img src="https://i.ibb.co/gLVdkq3D/Gemini-Generated-Image-6idkra6idkra6idk-modified.png" alt="Admin" class="hero-img">
+                    <img src="https://i.ibb.co/FbRQByFq/557149993-2003046580431595-7428406203553023357-n.jpg" alt="Admin" class="hero-img">
                 </div>
                 <h2>JARGALSAIKHAN</h2>
                 <div class="badge">VERIFIED MIDMAN</div>
@@ -416,8 +416,8 @@
         <div class="table-container">
             <table>
                 <tr><th>ҮЙЛЧИЛГЭЭ</th><th>НӨХЦӨЛ</th><th>ҮНЭ</th></tr>
-                <tr><td>Midman (Бага дүн)</td><td>0 - 1,000,000₮</td><td>5,000₮</td></tr>
-                <tr><td>Midman (Их дүн)</td><td>1,000,000₮ - Дээш</td><td>1%</td></tr>
+                <tr><td>Midman </td><td>0 - 1,000,000₮</td><td>5,000₮</td></tr>
+                <tr><td>Midman </td><td>1,000,000₮ - Дээш</td><td>1%</td></tr>
                 <tr><td>Аккаунт заруулах</td><td>Зарж өгсөн дүнгийн</td><td>5%</td></tr>
                 <tr><td>Аккаунт үнэлгээ / Bind</td><td>Зөвлөгөө</td><td class="free-text">ҮНЭГҮЙ</td></tr>
             </table>
@@ -492,6 +492,7 @@
 
 </body>
 </html>
+
 
 
 
