--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Midman|Profile</title>
+    <title>Midman | Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
@@ -349,7 +349,7 @@
 
     <section id="proof" class="container">
         <div class="section-header">
-            <h2 class="section-title">Миний Группүүд</h2>
+            <h2 class="section-title">Миний Удирдаж Буй Грүппүүд</h2>
             <div class="section-line"></div>
         </div>
         <div class="proof-grid">
@@ -362,28 +362,28 @@
             </a>
             <a href="https://facebook.com/groups/186310009926522" target="_blank" class="proof-link">
                 <div class="proof-icon admin-icon"><i class="fas fa-shield-alt"></i></div>
-                <div><div class="proof-text">PUBG Trade 🇲🇳</div><span class="proof-sub">34K • ADMIN</span></div>
+                <div><div class="proof-text">PUBG Аккоунт худалдаа 🇲🇳</div><span class="proof-sub">36K • ADMIN</span></div>
             </a>
             <a href="https://facebook.com/groups/905083090111442" target="_blank" class="proof-link">
                 <div class="proof-icon admin-icon"><i class="fas fa-shield-alt"></i></div>
-                <div><div class="proof-text">PUBG Midman 🇲🇳</div><span class="proof-sub">11K • ADMIN</span></div>
+                <div><div class="proof-text">PUBG MOBILE Аккоунт худалдаа & мид 🇲🇳💵💵</div><span class="proof-sub">11K • ADMIN</span></div>
             </a>
             <a href="https://facebook.com/groups/199627921906512" target="_blank" class="proof-link">
                 <div class="proof-icon admin-icon"><i class="fas fa-shield-alt"></i></div>
-                <div><div class="proof-text">Standoff 2 🇲🇳</div><span class="proof-sub">30K • ADMIN</span></div>
+                <div><div class="proof-text">Standoff 2 Mongolia🇲🇳</div><span class="proof-sub">30K • ADMIN</span></div>
             </a>
             
             <a href="https://facebook.com/groups/2998606320453023" target="_blank" class="proof-link">
                 <div class="proof-icon mod-icon"><i class="fas fa-check-circle"></i></div>
-                <div><div class="proof-text">Mobile Legends</div><span class="proof-sub">140K • MOD</span></div>
+                <div><div class="proof-text">Mobile legends: mongolia✅</div><span class="proof-sub">150K • MOD</span></div>
             </a>
             <a href="https://facebook.com/groups/1253738194719122" target="_blank" class="proof-link">
                 <div class="proof-icon mod-icon"><i class="fas fa-check-circle"></i></div>
-                <div><div class="proof-text">PUBG Mobile</div><span class="proof-sub">85K • MOD</span></div>
+                <div><div class="proof-text">PUBG Mobile: Mongolia🇲🇳</div><span class="proof-sub">85K • MOD</span></div>
             </a>
             <a href="https://facebook.com/groups/806727429744887" target="_blank" class="proof-link">
                 <div class="proof-icon mod-icon"><i class="fas fa-check-circle"></i></div>
-                <div><div class="proof-text">Standoff 2 Trade</div><span class="proof-sub">48K • MOD</span></div>
+                <div><div class="proof-text">Standoff 2: Mongolia🇲🇳</div><span class="proof-sub">48K • MOD</span></div>
             </a>
             <a href="https://facebook.com/groups/5321202191332717" target="_blank" class="proof-link">
                 <div class="proof-icon mod-icon"><i class="fas fa-check-circle"></i></div>
@@ -391,19 +391,19 @@
             </a>
             <a href="https://facebook.com/groups/1851470735099237" target="_blank" class="proof-link">
                 <div class="proof-icon mod-icon"><i class="fas fa-check-circle"></i></div>
-                <div><div class="proof-text">PUBG Mobile Trade</div><span class="proof-sub">31K • MOD</span></div>
+                <div><div class="proof-text">PUBG MOBILE 🇲🇳 АККАУНТ ХУДАЛДАА</div><span class="proof-sub">33K • MOD</span></div>
             </a>
             <a href="https://facebook.com/groups/146728474305150" target="_blank" class="proof-link">
                 <div class="proof-icon mod-icon"><i class="fas fa-check-circle"></i></div>
-                <div><div class="proof-text">Pubg Mobile Mongolia</div><span class="proof-sub">30K • MOD</span></div>
+                <div><div class="proof-text">Pubg Mobile Mongolia🇲🇳🇲🇳</div><span class="proof-sub">31K • MOD</span></div>
             </a>
             <a href="https://facebook.com/groups/980953797128182" target="_blank" class="proof-link">
                 <div class="proof-icon mod-icon"><i class="fas fa-check-circle"></i></div>
-                <div><div class="proof-text">MLBB Trade MN</div><span class="proof-sub">16K • MOD</span></div>
+                <div><div class="proof-text">MLBB-Mongolia acc awn zarn🇲🇳🔥</div><span class="proof-sub">16K • MOD</span></div>
             </a>
             <a href="https://facebook.com/groups/793255685887110" target="_blank" class="proof-link">
                 <div class="proof-icon mod-icon"><i class="fas fa-check-circle"></i></div>
-                <div><div class="proof-text">Acc Rent</div><span class="proof-sub">4K • MOD</span></div>
+                <div><div class="proof-text">Acc turees | PUBG ,ML |</div><span class="proof-sub">4K • MOD</span></div>
             </a>
         </div>
     </section>
@@ -481,7 +481,7 @@
 
     <footer>
         <div class="container">
-            <div class="logo" style="justify-content: center; margin-bottom: 20px;">Jargalsaikhan</div>
+            <div class="logo" style="justify-content: center; margin-bottom: 20px;">ЖАРГАЛСАЙХАН</div>
             <div class="footer-social">
                 <a href="https://www.facebook.com/jargalsaikhan.official" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://m.me/9552970884792716" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
@@ -492,6 +492,7 @@
 
 </body>
 </html>
+
 
 
 
