--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                     <p class="acc-details">Collection Lv76, 75 Level, Rare Skins. Bind: Google.</p>
                     <div class="price-row">
                         <span class="price-tag">2,500,000₮</span>
-                        <a href="https://m.me/61561712856021" target="_blank" class="btn-buy">АВАХ</a>
+                        <a href="https://m.me/jargalsaikhan.officia" target="_blank" class="btn-buy">АВАХ</a>
                     </div>
                 </div>
             </div>
@@ -456,7 +456,7 @@
                     <p class="acc-details">Collection Lv65, 85 Level, Bape Skins. Bind: Elink.</p>
                     <div class="price-row">
                         <span class="price-tag">2,000,000₮</span>
-                        <a href="https://m.me/61561712856021" target="_blank" class="btn-buy">АВАХ</a>
+                        <a href="https://m.me/jargalsaikhan.official" target="_blank" class="btn-buy">АВАХ</a>
                     </div>
                 </div>
             </div>
@@ -492,6 +492,7 @@
 
 </body>
 </html>
+
 
 
 
