--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
         }
 
         /* --- AURORA BACKGROUND ANIMATION --- */
+        /* ZASVAR: position: absolute-г position: fixed болгож засав. 
+           Ингэснээр хуудасны өндөрт нөлөөлөхгүй */
         body::before, body::after {
-            content: ''; position: absolute; border-radius: 50%;
+            content: ''; position: fixed; 
+            border-radius: 50%;
             filter: blur(80px); z-index: -1; opacity: 0.4;
             animation: float 10s infinite alternate;
         }
