--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     <img src="https://i.ibb.co/FbRQByFq/557149993-2003046580431595-7428406203553023357-n.jpg" alt="Admin" class="hero-img">
                 </div>
                 <h2>ЖАРГАЛСАЙХАН</h2>
-                <div class="badge">VERIFIED MIDMAN</div>
+                <div class="badge">SELLER & MIDMAN</div>
                 
                 <div class="hero-btns" style="justify-content: center; margin-top: 20px;">
                     <a href="https://www.facebook.com/jargalsaikhan.official" target="_blank" class="btn btn-glass" style="width:100%">
@@ -577,3 +577,4 @@
 
 </body>
 </html>
+
