--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
         <div class="market-grid">
             
             <!-- Account 1 -->
-            <div class="account-card">
+            <!-- <div class="account-card">
                 <div class="acc-img-container">
                     <div class="acc-tag">PUBG</div>
                     <img src="https://i.ibb.co/bR2r2nr8/IMG-1143.png" alt="PUBG">
@@ -528,10 +528,10 @@
                         <a href="https://m.me/jargalsaikhan.official" target="_blank" class="btn-buy">АВАХ</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Account 2 -->
-            <div class="account-card">
+            <!-- <div class="account-card">
                 <div class="acc-img-container">
                     <div class="acc-tag">PUBG</div>
                     <img src="https://i.ibb.co/JW0Kbwpw/595865809-2060174601385459-6335660528261022994-n.jpg" alt="PUBG">
@@ -559,7 +559,7 @@
                         <a href="https://m.me/100021788174984" target="_blank" class="btn-buy">АВАХ</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </section>
