--- a/index.html
+++ b/index.html
@@ -406,8 +406,8 @@
             <div class="hero-text">
                 <h1>Найдвартай <br> Midman Үйлчилгээ</h1>
                 <p>Монголын томоохон группүүдийн Админ, Модератор. Таны цахим хөрөнгийг эрсдэлээс бүрэн хамгаална. Хурдан шуурхай, баталгаатай.</p>
-                <a href="#market" class="btn btn-primary" style="display:inline-flex;">БЭЛЭН АККАУНТУУД</a>
-            </div>
+                <!-- <a href="#market" class="btn btn-primary" style="display:inline-flex;">БЭЛЭН АККАУНТУУД</a>
+            </div> -->
         </div>
     </section>
 
@@ -491,14 +491,14 @@
             </table>
         </div>
     </section>
-
+<!-- 
     <section id="market" class="container">
         <div class="section-header">
             <h2 class="section-title">Зарах Аккоунтууд</h2>
             <div class="section-line"></div>
         </div>
         <div class="market-grid">
-            
+             -->
             <!-- Account 1 -->
             <!-- <div class="account-card">
                 <div class="acc-img-container">
@@ -577,4 +577,5 @@
 
 </body>
 </html>
+
 
