--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
     <meta property="og:image" content="https://i.ibb.co/gLVdkq3D/Gemini-Generated-Image-6idkra6idkra6idk-modified.png">
-    <link rel="icon" href="https://i.ibb.co/gLVdkq3D/Gemini-Generated-Image-6idkra6idkra6idk-modified.png" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/ZRVvy5HL/54ae47eb1931374bb5df0461616d0c68.jpg" type="image/x-icon">
 
     <style>
         :root {
@@ -577,5 +577,6 @@
 
 </body>
 </html>
+
 
 
